2018-03-19 0.8.6 alpha
Unified meta event reading code.
Fixed playlist dialog behaving oddly.

2018-02-07 0.8.6 alpha
Forgot to unregister UI hooks.

2018-02-03 0.8.6 alpha
Minor performance improvement to the 3D visualization.

2018-01-29 0.8.6 alpha
Fixed FTBFS with Qt 5.6.

2017-10-18 0.8.6 alpha
API changes:
  - Lots of renaming.
  - qmpVisualizationIntf no longer exists. Visualization
  is now just a normal functionality.
  - Added UI Hooks.
Fixed a bunch of crashes and insanities in the
visualization plugin.
I think it's now time for 0.8.6 alpha.

2017-08-22 0.8.6 indev
Windows type of functionality windows is now Qt::Dialog.
Initialization fluidsynth asynchronously.
Minor documentation update.

2017-08-10 0.8.6 indev
Windows of several main functionalities are no longer
QDialogs. Fixed unexpected behavior.
Now visualization window can be closed by sending it
a close signal.
Trying a solution to address the problem that prevents
plugins from being loaded correctly in Windows if the
path contains Chinese characters. Not even tried to
build in Windows though.

2017-06-22 0.8.6 indev
Minor bug fixes.
SMF reader finally takes chunk length into account.
Do not prepend sysex header to F0h sysex. Let the
readers do it.
File readers code cleanups and refined error messages.

2017-06-21 0.8.6 indev
Fixed FTBFS on Windows.
Fixed the default output device option.
Seeking now restores CC values correctly.

2017-06-21 0.8.6 indev
Fixed a bunch of bugs and crashes in the RtMidi
output device.

2017-06-21 0.8.6 indev
Code refactoring:
  Complete rewrite of the MIDI mapper. The new
  architecture allows implementation of custom MIDI
  output devices.
Enforces single fluidsynth instance. Deprecating
the option.
Documentation uptate.
The lite version no longer have hardcoded soundfont
path.
More testing needed for this revision.

2017-06-16 0.8.6 indev
Code refactoring:
  Tracks information are now preserved.
  CMidiReaderCollection no longer handles file info
  operations.